<resources>
    <string name="app_name">Tasks And Habits</string>
    <string name="tab_tasks">Tasks</string>
    <string name="tab_habits">Habits</string>
    <string name="tab_todos">Todos</string>

    <string name="placeholder">PLACEHOLDER</string>
    <string name="time_placeholder">--:--:-- / --:--:--</string>

    <!-- Task types -->
    <string name="shopping">Shopping</string>
    <string name="home">Home</string>
    <string name="basic">Basic</string>

    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="start">Start</string>

    <string name="name">Name</string>
    <string name="description">Description</string>

    <string name="hour">Hour</string>
    <string name="minute">Minute</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_habit_button_description">button_to_start_habit</string>
    <string name="button_started_time_text">button_started_time_text</string>
    <string name="type">Type</string>
    <string name="add_habit_fab_description">Button adds new habit to the database</string>
</resources>