<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/habit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textSize="@dimen/text_m"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_started"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:contentDescription="@string/button_started_time_text"/>
    </RelativeLayout>


        <TextView
            android:id="@+id/time_text"
            android:text="@string/time_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_anchor="@id/fab_started"
            app:layout_anchorGravity="center"
            android:textSize="32dp"
            android:elevation="4dp"
            android:textColor="@color/white"
            />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
