<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/parentRelative"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textAutoComplete"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_layout"
                android:layout_margin="@dimen/text_margin"
                android:hint="@string/description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/time_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/description_layout"
                android:layout_centerHorizontal="true">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/hours_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/text_margin"
                    android:hint="@string/hour">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:padding="16dp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/minutes_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:hint="@string/minute"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/text_margin"
                    android:layout_toEndOf="@id/hours_layout">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:padding="16dp"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_start"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="@dimen/fab_margin"
                android:layout_below="@id/time_layout"
                android:layout_centerHorizontal="true"/>

            <LinearLayout
                android:id="@+id/delete_edit_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/fab_start"
                android:layout_marginTop="40dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:layout_marginRight="@dimen/text_margin"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cancel_save_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/fab_start"
                android:layout_marginTop="40dp"
                android:visibility="gone">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_marginRight="@dimen/text_margin"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"/>
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>
    
    <TextView
        android:id="@+id/fab_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="16dp"
        app:layout_anchor="@id/fab_start"
        android:textColor="@color/white"
        app:layout_anchorGravity="center"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
